--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,10 @@
   background-color: red;
 }
 
+.yellow {
+  background-color: yellow;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
